@@ -1,5 +1,15 @@
 2022-03-10  Antoine Quint  <graouts@webkit.org>
 
+        [web-animations] mask-clip should support discrete animation
+        https://bugs.webkit.org/show_bug.cgi?id=237725
+
+        Reviewed by Simon Fraser.
+
+        * animation/CSSPropertyAnimation.cpp:
+        (WebCore::CSSPropertyAnimationWrapperMap::CSSPropertyAnimationWrapperMap):
+
+2022-03-10  Antoine Quint  <graouts@webkit.org>
+
         [web-animations] scroll-behavior should support discrete animation
         https://bugs.webkit.org/show_bug.cgi?id=237723
 
