@@ -1,5 +1,16 @@
 2022-03-10  Antoine Quint  <graouts@webkit.org>
 
+        [web-animations] mask-clip should support discrete animation
+        https://bugs.webkit.org/show_bug.cgi?id=237725
+
+        Reviewed by Simon Fraser.
+
+        * web-platform-tests/web-animations/animation-model/animation-types/accumulation-per-property-002-expected.txt:
+        * web-platform-tests/web-animations/animation-model/animation-types/addition-per-property-002-expected.txt:
+        * web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-002-expected.txt:
+
+2022-03-10  Antoine Quint  <graouts@webkit.org>
+
         [web-animations] scroll-behavior should support discrete animation
         https://bugs.webkit.org/show_bug.cgi?id=237723
 
